syntax = "proto3";
package pb;

option go_package = "./pkg/pb";
import "pkg/pb/response.proto";

service AuthService {
    rpc UserSignup(SignupRequest) returns (SignupResponse){}
    rpc UserLogin(LoginRequest) returns (LoginResponse) {}
    rpc ValidateAccessToken(ValidateRequest) returns (ValidateResponse){}
}


message SignupRequest{
    string first_name = 1;
    string last_name = 2;
    string email = 3;
    string password = 4;
}

message SignupResponse{
   Response response = 1;
}

message LoginRequest{
    string email = 1;
    string password = 2;
}

message LoginResponse {
    Response response = 1;
    string access_token = 2; 
}

message ValidateRequest{
    string access_token = 1;
}

message ValidateResponse {
    Response response = 1;
    uint32 user_id = 2;
}